add runtime info in home call
